--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react.min.js"/></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react-dom.min.js"/></script>
-        <script src="bundle.js"/></script>   
+        <script src="./bundle.js"/></script>   
     </footer>
 </html>
